debhelper (8.9.12) UNRELEASED; urgency=low

  * Added German translation of man pages, done by Chris Leick. Closes: #651221
  * Typo fixes. Closes: #651224 Thanks, Chris Leick

 -- Joey Hess <joeyh@debian.org>  Tue, 06 Dec 2011 17:16:28 -0400

debhelper (8.9.11) unstable; urgency=low

  * Fix broken option passing to objcopy. Closes: #649044

 -- Joey Hess <joeyh@debian.org>  Thu, 17 Nov 2011 00:15:34 -0400

debhelper (8.9.10) unstable; urgency=low

  * dh_strip: In v9, pass --compress-debug-sections to objcopy.
    Needs a new enough binutils and gdb; debhelper backport
    may need to disable this.
    Thanks, Aurelien Jarno and Bastien ROUCARIES. Closes: #631985
  * dh: Ensure -a and -i are passed when running override_dh_command-arch
    and override_dh_command-indep targets. This is needed when the binary
    target is run, rather than binary-arch/binary-indep. Closes: #648901

 -- Joey Hess <joeyh@debian.org>  Wed, 16 Nov 2011 11:54:59 -0400

debhelper (8.9.9) unstable; urgency=low

  * dh_auto_build: Use target architecture (not host architecture) 
    for build directory name. Closes: #644553 Thanks, Tom Hughes
  * dh: Add dh_auto_configure parameter example. Closes: #645335

 -- Joey Hess <joeyh@debian.org>  Fri, 04 Nov 2011 17:01:58 -0400

debhelper (8.9.8) unstable; urgency=low

  * dh_fixperms: Operate on .ali files throughout /usr/lib, including
    multiarch dirs. Closes: #641279
  * dh: Avoid compat deprecation warning before option parsing.
    Closes: #641361
  * Clarify description of dh_auto_* -- params. Closes: #642786
  * Mention in debhelper(7) that buildsystem options are typically passed
    to dh. Closes: #643069
  * perl_makemaker: In v9, pass CFLAGS to Makefile.PL and Build.Pl
    Closes: #643702, #497653 Thanks, Steve Langasek, gregor herrmann.

 -- Joey Hess <joeyh@debian.org>  Thu, 29 Sep 2011 15:41:16 -0400

debhelper (8.9.7) unstable; urgency=low

  * dh: Now you can use override_dh_command-arch and override_dh_command-indep